--- a/DevQuestions/src/DevQuestions.Web/DevQuestions.Web.csproj
+++ b/DevQuestions/src/DevQuestions.Web/DevQuestions.Web.csproj
@@ -14,7 +14,9 @@
     <ItemGroup>
       <ProjectReference Include="..\DevQuestions.Application\DevQuestions.Application.csproj" />
       <ProjectReference Include="..\DevQuestions.Domain\DevQuestions.Domain.csproj" />
+      <ProjectReference Include="..\DevQuestions.Infrastructure.Postgres\DevQuestions.Infrastructure.Postgres.csproj" />
       <ProjectReference Include="..\DevQuestions.Presenters\DevQuestions.Presenters.csproj" />
+      <ProjectReference Include="..\Shared\Shared.csproj" />
     </ItemGroup>
 
 </Project>
